--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "node-packages-template",
+  "name": "@yiuayiu/hk-gov-data",
   "version": "0.0.1",
   "description": "",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "AYiU <npm@ayiu.net>",
   "license": "ISC"
 }
