Fixed: miss define in package.json

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@yiuayiu/hk-gov-data",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "type": "module",
   "main": "index.js",
+  "types": "traffic.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
